# crow_webserver_desktop-client

./: .gitignore  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/includes/: rz_config.hpp
